config: add and configure resilience4j dependency

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,17 @@
 spring.application.name=ecommerce
+
+# Logging Settings
 logging.file.name=logfile.log
+
+# Microservices Settings
+store.baseUrl=http://localhost:8001
+exchange.baseUrl=http://localhost:8002
+fidelity.baseUrl=http://localhost:8003
+
+# Resilience4j Settings (Circuit Break)
+resilience4j.circuitbreaker.instances.exchangeService.failure-rate-threshold=50
+resilience4j.circuitbreaker.instances.exchangeService.slow-call-rate-threshold=50
+resilience4j.circuitbreaker.instances.exchangeService.sliding-window-size=10
+resilience4j.circuitbreaker.instances.exchangeService.sliding-window-type=COUNT_BASED
+resilience4j.circuitbreaker.instances.exchangeService.minimum-number-of-calls=5
+resilience4j.circuitbreaker.instances.exchangeService.wait-duration-in-open-state=10s
