--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,11 @@ ext {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
-	implementation("io.github.resilience4j:resilience4j-timelimiter:${property("resilience4jVersion")}")
+	implementation 'io.github.resilience4j:resilience4j-timelimiter:2.2.0'
+	implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.2.0'
+	implementation 'io.github.resilience4j:resilience4j-reactor:2.2.0'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+  	implementation 'org.springframework.boot:spring-boot-starter-aop'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
