--- a/build.gradle
+++ b/build.gradle
@@ -17,9 +17,14 @@ repositories {
 	mavenCentral()
 }
 
+ext {
+	resilience4jVersion = '2.0.2'
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation("io.github.resilience4j:resilience4j-timelimiter:${property("resilience4jVersion")}")
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
