config: containerize application and allow configuration by env vars

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.application.name=ecommerce
 logging.file.name=logfile.log
 
 # Microservices Settings
-store.baseUrl=http://localhost:8001
-exchange.baseUrl=http://localhost:8002
-fidelity.baseUrl=http://localhost:8003
+store.baseUrl=${STORE_BASE_URL:http://localhost:8001}
+exchange.baseUrl=${EXCHANGE_BASE_URL:http://localhost:8002}
+fidelity.baseUrl=${FIDELITY_BASE_URL:http://localhost:8003}
 
 # Resilience4j Settings (Circuit Break)
 resilience4j.circuitbreaker.instances.exchangeService.failure-rate-threshold=50
