feat: implemented the call of the product get and sell methods

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.application.name=ecommerce
 logging.file.name=logfile.log
 
 # Microservices Settings
-store.baseUrl=${STORE_BASE_URL:http://localhost:8001}
-exchange.baseUrl=${EXCHANGE_BASE_URL:http://localhost:8002}
-fidelity.baseUrl=${FIDELITY_BASE_URL:http://localhost:8003}
+store.baseUrl=${STORE_BASE_URL:http://localhost:8081}
+exchange.baseUrl=${EXCHANGE_BASE_URL:http://localhost:8082}
+fidelity.baseUrl=${FIDELITY_BASE_URL:http://localhost:8083}
 
 # Resilience4j Settings (Circuit Break)
 resilience4j.circuitbreaker.instances.exchangeService.failure-rate-threshold=50
@@ -15,3 +15,12 @@ resilience4j.circuitbreaker.instances.exchangeService.sliding-window-size=10
 resilience4j.circuitbreaker.instances.exchangeService.sliding-window-type=COUNT_BASED
 resilience4j.circuitbreaker.instances.exchangeService.minimum-number-of-calls=5
 resilience4j.circuitbreaker.instances.exchangeService.wait-duration-in-open-state=10s
+
+# General configuration of the Rate Limiter
+resilience4j.ratelimiter.configs.default.limit-for-period=1
+resilience4j.ratelimiter.configs.default.limit-refresh-period=1s
+resilience4j.ratelimiter.configs.default.timeout-duration=500ms
+
+# Specific configuration for an instance called "apiRateLimiter"
+resilience4j.ratelimiter.instances.storeServiceRateLimiter.base-config=default
+
