--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'io.github.resilience4j:resilience4j-timelimiter:2.2.0'
 	implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.2.0'
+	implementation 'io.github.resilience4j:resilience4j-ratelimiter:2.2.0'
 	implementation 'io.github.resilience4j:resilience4j-reactor:2.2.0'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
   	implementation 'org.springframework.boot:spring-boot-starter-aop'
