fix: added call to methods for fault tolerance or not in the store service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,14 @@ resilience4j.circuitbreaker.instances.exchangeService.sliding-window-type=COUNT_
 resilience4j.circuitbreaker.instances.exchangeService.minimum-number-of-calls=5
 resilience4j.circuitbreaker.instances.exchangeService.wait-duration-in-open-state=10s
 
+# Settings for the store service circuit
+resilience4j.circuitbreaker.instances.storeService.failure-rate-threshold=40
+resilience4j.circuitbreaker.instances.storeService.slow-call-rate-threshold=40
+resilience4j.circuitbreaker.instances.storeService.sliding-window-size=20
+resilience4j.circuitbreaker.instances.storeService.sliding-window-type=TIME_BASED
+resilience4j.circuitbreaker.instances.storeService.minimum-number-of-calls=10
+resilience4j.circuitbreaker.instances.storeService.wait-duration-in-open-state=15s
+
 # General configuration of the Rate Limiter
 resilience4j.ratelimiter.configs.default.limit-for-period=1
 resilience4j.ratelimiter.configs.default.limit-refresh-period=1s
