feat: implement retry logic and improve issued response

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,13 +16,11 @@ resilience4j.circuitbreaker.instances.exchangeService.sliding-window-type=COUNT_
 resilience4j.circuitbreaker.instances.exchangeService.minimum-number-of-calls=5
 resilience4j.circuitbreaker.instances.exchangeService.wait-duration-in-open-state=10s
 
-# Settings for the store service circuit
-resilience4j.circuitbreaker.instances.storeService.failure-rate-threshold=40
-resilience4j.circuitbreaker.instances.storeService.slow-call-rate-threshold=40
-resilience4j.circuitbreaker.instances.storeService.sliding-window-size=20
-resilience4j.circuitbreaker.instances.storeService.sliding-window-type=TIME_BASED
-resilience4j.circuitbreaker.instances.storeService.minimum-number-of-calls=10
-resilience4j.circuitbreaker.instances.storeService.wait-duration-in-open-state=15s
+# Resilience4j Settings (Retry)
+resilience4j.retry.instances.storeService.maxAttempts=4
+resilience4j.retry.instances.storeService.waitDuration=5000
+resilience4j.retry.instances.storeService.retryExceptions=java.io.IOException
+resilience4j.retry.instances.storeService.ignoreExceptions=java.lang.IllegalArgumentException
 
 # General configuration of the Rate Limiter
 resilience4j.ratelimiter.configs.default.limit-for-period=10
